<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Admin.AdminPageFragment">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_s_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/creditEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/viewPurchasesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_purchases" />

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:id="@+id/purchaseHistoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />
</LinearLayout>