<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Landingpage">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canteen_app"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bt_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/black"
        android:text="@string/admin"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_page_title"
        app:layout_constraintBottom_toTopOf="@+id/bt_user"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/round_btn"
        android:text="@string/user"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bt_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>