<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientjett"
    tools:context=".Userloginpage">

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/layout2"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        app:layout_goneMarginTop="16dp"
        app:startIconDrawable="@drawable/outline_mail_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Emailaddress"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:startIconDrawable="@drawable/outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_registration"
        app:layout_constraintTop_toBottomOf="@+id/layout2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_registration"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login" />
</androidx.constraintlayout.widget.ConstraintLayout>