<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginPageFragment"
    android:background="@drawable/gradient_jett">

    <ImageView
        android:id="@+id/userLoginTitleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:src="@drawable/logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent=".3"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintBottom_toTopOf="@id/userLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLayout1"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/outline_mail_24"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/userLayout2"
        app:layout_constraintTop_toBottomOf="@+id/userLoginTitleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Emailaddress"
            app:layout_constraintTop_toBottomOf="@+id/userLoginTitleTextView" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:startIconDrawable="@drawable/outline_lock_24"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/userLoginButton"
        app:layout_constraintTop_toBottomOf="@+id/userLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/userEmailAddressEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/userRegistrationButton"
        app:layout_constraintTop_toBottomOf="@+id/userLayout2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userRegistrationButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userLoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>